--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
         }
     ],
     "require": {
-        "symfony/console": "~2.0",
-        "symfony/dependency-injection": "~2.0",
-        "symfony/config": "~2.0"
+        "symfony/console": "~2.0@dev",
+        "symfony/dependency-injection": "~2.0@dev",
+        "symfony/config": "~2.0@dev"
     },
     "autoload": {
         "psr-0": { "Ndewez\\": "" }
