--- a/composer.json
+++ b/composer.json
@@ -10,16 +10,16 @@
         }
     ],
     "require": {
-        "symfony/console": "~2.0@dev",
-        "symfony/dependency-injection": "~2.0@dev",
-        "symfony/config": "~2.0@dev"
+        "symfony/console": "~2.1|~3.0.0",
+        "symfony/dependency-injection": "~2.1|~3.0.0",
+        "symfony/config": "~2.1|~3.0.0"
     },
     "autoload": {
         "psr-0": { "Ndewez\\": "" }
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "2.0.x-dev"
+          "dev-master": "2.8-dev"
         }
     },
     "minimum-stability": "dev"
